Complete Phase 18: Implement AI Agent Workspace